--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1140,6 +1140,9 @@ body{
                     .approval-pending{
                         background-color: #FFA424;
                     }
+                    .approval-approved{
+                        background-color: green;
+                    }
                     .approver-info-component{
                         display: flex;
                         flex-direction: column;
@@ -1172,149 +1175,12 @@ body{
                         height: 77px;
                         position: absolute;
                         left: 5.5px;
-                        // width: 1px;
-                        // background-color: #ccc;
                         border-left: 1px #898989 dashed;
                         top: 36px;
                         z-index: -1;
 
                     }
                 }
-                // .user-details-component{
-                //     border-bottom: solid 2px #272727;
-                //     display: flex;
-                //     align-items: flex-start;
-                //     padding-bottom: 15px;
-                //     .user-info-component{
-                //     margin-left:16px;
-                //     .user-info-row{
-                //         display: flex;
-                //         align-items: center;
-                //         .info-key{
-                //             min-width: 95px;
-                //             color: #898989;
-                //             font-family: Urbanist;
-                //             font-size: 14px;
-                //             font-style: normal;
-                //             font-weight: 500;
-                //             line-height: 20px;
-                //         }
-                //         .info-value{
-                //             flex:1;
-                //             color: #FFF;
-                //             /* Regular/Small */
-                //             font-family: Inter;
-                //             font-size: 14px;
-                //             font-style: normal;
-                //             font-weight: 500;
-                //             line-height: 20px;
-                //             margin-left: 10px;
-                //         }
-                //         .attachment-value{
-                //             display: flex;
-                //             align-items: center;
-                //             img {
-                //                 margin-right : 5px
-                //             }
-                //         }
-                //     }
-                //     }
-                // }
-                // .leave-days-info-component{
-                //     margin-top: 15px;
-                //     .leave-start-end-date{
-                //         color: #898989;
-                //         font-family: Urbanist;
-                //         font-size: 12px;
-                //         font-style: normal;
-                //         font-weight: 700;
-                //         line-height: normal;
-                //         letter-spacing: 0.6px;
-                //         text-transform: uppercase;
-                //     }
-                //     .leave-hours-and-table-controller-row{
-                //         display: flex;
-                //         justify-content: space-between;
-                //         align-items: center;
-                //         .total-hours-text{
-                //             margin: 0px;
-                //             color: #FFF;
-                //             font-family: Urbanist;
-                //             font-size: 12px;
-                //             font-style: normal;
-                //             font-weight: 700;
-                //             line-height: normal;
-                //             letter-spacing: 0.6px;
-                //             text-transform: uppercase;
-                //         }
-                //         .table-visibility-controller{
-                //             display: flex;
-                //             align-items: center;
-                //             img {
-                //                 margin-left: 15px;
-                //             }
-                //         }
-                //     }
-                // }
-                // .leave-days-table-component{
-                //     .leave-days-table{
-                //         width: 100%;
-                //         margin-top: 15px;
-                //         .table-head{
-                //             background-color: #272727;
-                //             overflow: hidden;
-                //             .first-col{
-                //                 border-top-left-radius: 8px;
-                //                 border-bottom-left-radius: 8px;
-                //             }
-                //             .last-col{
-                //                 border-top-right-radius: 8px;
-                //                 border-bottom-right-radius: 8px;
-                //             }
-                //             td{
-                //                 padding: 10px;
-                //                 label {
-                //                     color: #898989;
-                //                     font-family: Urbanist;
-                //                     font-size: 13.587px;
-                //                     font-style: normal;
-                //                     font-weight: 500;
-                //                     line-height: normal;
-                //                     letter-spacing: 0.679px;
-                //                     text-transform: uppercase;
-                //                 }
-                //             }
-                //         }
-                //         .table-body-row{
-                //             td {
-                //                 padding: 8px 10px 2px 10px;
-                //                 label{
-                //                     color: #FFF;
-                //                     font-family: Urbanist;
-                //                     font-size: 13px;
-                //                     font-style: normal;
-                //                     font-weight: 700;
-                //                     line-height: normal;
-                //                     letter-spacing: 0.65px;
-                //                 }
-                //             }
-                //         }
-                //         .table-off-days-body-row{
-                //             td {
-                //                 padding: 8px 10px 5px;
-                //                 label{
-                //                     color: #898989;
-                //                     font-family: Urbanist;
-                //                     font-size: 13px;
-                //                     font-style: normal;
-                //                     font-weight: 400;
-                //                     line-height: normal;
-                //                     letter-spacing: 0.65px;
-                //                 }
-                //             }
-                //         }
-                //     }
-                // }
             }
         }
     }
