leave-details done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,10 @@ body {
   background: transparent;
   border: none;
   margin-left: 18px;
+  width: 100%;
+}
+.top-bar .top-bar-content .actions-component .search-bar-component input[type=search]:focus {
+  outline: none;
 }
 .top-bar .top-bar-content .actions-component .filter-icon-component {
   margin: 0 16px;
@@ -1155,6 +1159,51 @@ body {
   border-left: 1px #898989 dashed;
   top: 36px;
   z-index: -1;
+}
+.page-content .main-content .leave-deatils-component .comments-box-card {
+  border: solid 2px #272727;
+  border-radius: 12px;
+  padding: 16px;
+  margin-bottom: 50px;
+}
+.page-content .main-content .leave-deatils-component .comments-box-card .comments-box {
+  color: #fff;
+  background-color: transparent;
+  min-width: 100%;
+  border: none;
+}
+.page-content .main-content .leave-deatils-component .comments-box-card .comments-box:focus {
+  outline: none;
+}
+.page-content .main-content .leave-deatils-component .leave-request-actions-row {
+  display: flex;
+  justify-content: flex-end;
+  background-color: #272727;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  padding: 20px 0;
+}
+.page-content .main-content .leave-deatils-component .leave-request-actions-row .action-button {
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.page-content .main-content .leave-deatils-component .leave-request-actions-row .approve {
+  border: solid 2px #6E56E0;
+  background: #6E56E0;
+  color: #fff;
+  margin: 0 20px 0 15px;
+  width: 130px;
+  height: 40px;
+}
+.page-content .main-content .leave-deatils-component .leave-request-actions-row .reject {
+  border: solid 2px #151515;
+  background: #272727;
+  color: #fff;
+  width: 120px;
+  height: 40px;
 }
 
 .approve-toast-notification {
